--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -15,6 +15,7 @@
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/bootstrap.min.css" />
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/cyborg_bootstrap.min.css" />
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/xeditable.css" />
+            <link rel="stylesheet" href="{{ app.request.basepath }}/css/textAngular.css" />
                         
             <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 			            
@@ -83,12 +84,14 @@
 	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/angular.min.js"></script>
 	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/underscore.min.js"></script>
 	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/restangular.min.js"></script>
-	    {#}<script src="{{ app.request.basepath }}/js/angular/1.4.8/angular-resource.min.js"></script>#}
-	    {#<script src="{{ app.request.basepath }}/js/angular/1.4.8/formly.min.js"></script>
-	    <script src="{{ app.request.basepath }}/js/angular/1.4.8/angular-formly-templates-bootstrap.min.js"></script>#}
+	    
+	    	    <script src="{{ app.request.basepath }}/js/textAngular/textAngular-rangy.min.js"></script>      
+	    <script src="{{ app.request.basepath }}/js/textAngular/textAngular-sanitize.min.js"></script>
+	    <script src="{{ app.request.basepath }}/js/textAngular/textAngular.min.js"></script>
+	    
+	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/xeditable.js"></script>
+	    
 
-	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/xeditable.min.js"></script>
-	      
 	    
 	    <script src="{{ app.request.basepath }}/js/api/services.js"></script>
 	    <script src="{{ app.request.basepath }}/js/api/controllers.js"></script>
