--- a/src/LarpManager/Views/user/reset-password.twig
+++ b/src/LarpManager/Views/user/reset-password.twig
@@ -14,7 +14,7 @@
         <div class="alert alert-danger">{{ error|nl2br }}</div>
     {% endif %}
 
-    <form class="form-horizontal" method="POST">
+    <form class="form-horizontal" method="POST" action="{{ path('user.reset-password', {'token':token}) }}">
         <div class="form-group">
             <label class="col-sm-2 control-label" for="input-password">Nouveau mot de passe</label>
             <div class="col-sm-8">
