gestion des groupes secondaires par les chefs de groupe

--- a/src/LarpManager/Views/admin/territoire/index.twig
+++ b/src/LarpManager/Views/admin/territoire/index.twig
@@ -21,7 +21,7 @@
 							href="#"
 							data-toggle="tooltip" data-placement="top"
 							title="Créer un nouveau territoire" 
-							ng-click="new()">
+							ng-click="createNew()">
 							<i class="fa fa-plus"></i>
 						</a>
 		      			<div class="input-group">
