--- a/src/LarpManager/Views/groupeSecondaire/gestion.twig
+++ b/src/LarpManager/Views/groupeSecondaire/gestion.twig
@@ -1,9 +1,62 @@
 {% extends "layout.twig" %}
 
-{% block title %}Groupe secondaire{% endblock title %}
+{% block title %}Groupe secondaire {{groupeSecondaire.label }}{% endblock title %}
 
 {% block content %}
 
+<ol class="breadcrumb">
+	<li><a href="{{ path('homepage')  }}">Accueil</a></li>
+	<li class="active">{{ groupeSecondaire.label }}</li>
+</ol>
 
-
+<div class="panel panel-default">
+	<div class="panel-body">
+	
+		<div class="header">
+			<h5>Description</h5>
+		</div>
+		
+		<p>{{ groupeSecondaire.description|markdown }}</p>
+		
+		<div class="header">
+			<h5>Liste des postulants</h5>
+		</div>
+		<blockquote>
+			<p>Voici la liste des personnages ayant postulé pour rejoindre votre groupe secondaire. Vous avez la possibilité d'accepter la demande, de la refuser ou de laisser le personnage parmis les postulants</p>
+		</blockquote>
+		<ul class="list-group">
+		{% for postulant in groupeSecondaire.postulants %}
+			<div class="list-group-item">
+				<div class="list-group-item-heading">
+					<strong>{{ postulant.personnage.nom }} - {{ postulant.personnage.surnom }}</strong>
+				</div>
+				<div class="list-group-item-text">
+					{{ postulant.explanation|markdown }}
+				</div>
+				<a class="btn btn-primary" 
+					href="{{ path('groupeSecondaire.gestion.accept', {'groupe': groupeSecondaire.id, 'postulant': postulant.id }) }}">
+					Accepter</a>
+				<a class="btn btn-default" 
+					href="{{ path('groupeSecondaire.gestion.wait', {'groupe': groupeSecondaire.id, 'postulant': postulant.id }) }}">
+					Mettre en attente</a>
+				<a class="btn btn-danger" 
+					href="{{ path('groupeSecondaire.gestion.reject', {'groupe': groupeSecondaire.id, 'postulant': postulant.id }) }}">
+					Rejeter</a>
+			</div>
+		{% endfor %}
+		</ul>
+		
+		<div class="header">
+			<h5>Liste des membres</h5>
+		</div>
+		
+		<ul>
+		{% for personnage in groupeSecondaire.personnages %}
+			<li>
+				{{ personnage.nom }} - {{ personnage.surnom }}
+			</li>
+		{% endfor %}
+		</ul>
+	</div>
+</div>
 {% endblock content %}
