--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -106,7 +106,8 @@
 						{% if is_granted('ROLE_USER', app.user) %}
 							<li><a href="{{ path('etatCivil') }}">Mon état-civil</a></li>
 						{% endif %}
-						<li><a href="{{ path('user') }}">Mon compte</a></li>					
+						<li><a href="{{ path('user') }}">Mon compte</a></li>	
+						<li><a href="{{ path('user.messagerie') }}">Ma messagerie</a></li>				
 						<li><a href="{{ path('user.logout') }}">Déconnection</a></li>
 					{%  else %}
 						<li><a href="{{ path('user.login') }}">Connection</a></li>
