--- a/src/LarpManager/Views/groupeSecondaire/gestion_response.twig
+++ b/src/LarpManager/Views/groupeSecondaire/gestion_response.twig
@@ -12,14 +12,14 @@
 	
 		
 	<div class="well bs-component">
-		<form action="{{ path('groupeSecondaire.gestion.response', {'groupe': groupeSecondaire.id, 'postulant': postulant.id}) }}" method="POST" {{ form_enctype(form) }}>
+		<form action="{{ path('groupeSecondaire.gestion.response', {'groupe': groupeSecondaire.id, 'postulant': postulant.id}) }}" method="POST" novalidate >
 			<fieldset>
 				<legend>Répondre à un postulant</legend>
 				
 				<div class="list-group">
 					<div class="list-group-item">
 						<div class="list-group-item-heading">
-							<strong>{{ postulant.personnage.nom }} - {{ postulant.personnage.surnom }}</strong>
+							<strong>{{ postulant.personnage.surnom }}</strong>
 						</div>
 						<div class="list-group-item-text">
 							{{ postulant.explanation|markdown }}
