--- a/src/LarpManager/Views/groupeSecondaire/gestion_remove.twig
+++ b/src/LarpManager/Views/groupeSecondaire/gestion_remove.twig
@@ -6,12 +6,12 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path("groupeSecondaire.gestion", {'index':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a></li>
+		<li><a href="{{ path("groupeSecondaire.gestion", {'groupe':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a></li>
 		<li class="active">Retirer un membre</li>
 	</ol>
 	
 	<div class="well bs-component">
-		<form action="{{ path('groupeSecondaire.gestion.remove', {'groupe': groupeSecondaire.id, 'personnage': personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
+		<form action="{{ path('groupeSecondaire.gestion.remove', {'groupe': groupeSecondaire.id, 'postulant': postulant.id}) }}" method="POST" {{ form_enctype(form) }}>
 			<fieldset>
 				<legend>Refus d'un postulant</legend>
 					<p>Le message suivant sera envoyé au joueur :</p>
