--- a/src/LarpManager/Views/homepage/fragment/personnage.twig
+++ b/src/LarpManager/Views/homepage/fragment/personnage.twig
@@ -144,7 +144,7 @@
 						
 					{% for groupeSecondaire in personnage.secondaryGroups %}
 						<li class="list-group-item">
-							<a href="{{ path('groupeSecondaire.detail', {'index':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a>
+							<a href="{{ path('groupeSecondaire.detail', {'groupe':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a>
 						</li>
 					{% endfor %}
 					<li class="list-group-item">
