--- a/src/LarpManager/Views/public/user/repondre.twig
+++ b/src/LarpManager/Views/public/user/repondre.twig
@@ -21,7 +21,7 @@
 				<div class="list-group">
 					<div class="list-group-item">
 						<div class="list-group-item-heading">
-							<u>{{ message.title }}</u>&nbsp;envoyé par&nbsp;<strong>{{ message.userRelatedByAuteur.username }}</strong><br />
+							<u>{{ message.title }}</u>&nbsp;envoyé par&nbsp;<strong>{{ message.userRelatedByAuteur.personnage.publicName }}</strong><br />
 							<em>Envoyé le {{ message.creationDate|date('Y-m-d H:i:s') }}</em>
 						</div>
 						<div class="list-group-item-text">
