--- a/src/LarpManager/Views/user/email/newMessage.twig
+++ b/src/LarpManager/Views/user/email/newMessage.twig
@@ -7,7 +7,7 @@ Variables passed to this template:
 
 {# The subject line. #}
 {%- block subject -%}{%- autoescape false -%}
-    {{ message.title }} -- Nouvelle message.
+    {{ message.title }} -- Nouveau message.
 {%- endautoescape -%}{%- endblock -%}
 
 {# The plain text message. #}
