--- a/src/LarpManager/Views/groupeSecondaire/gestion_response.twig
+++ b/src/LarpManager/Views/groupeSecondaire/gestion_response.twig
@@ -6,7 +6,7 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path("groupeSecondaire.gestion", {'groupe':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a></li>
+		<li><a href="{{ path("groupeSecondaire.joueur", {'groupe':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a></li>
 		<li class="active">Répondre à un postulant</li>
 	</ol>
 	
@@ -19,7 +19,7 @@
 				<div class="list-group">
 					<div class="list-group-item">
 						<div class="list-group-item-heading">
-							<strong>{{ postulant.personnage.surnom }}</strong>
+							<strong>{{ postulant.personnage.publicName }}</strong>
 						</div>
 						<div class="list-group-item-text">
 							{{ postulant.explanation|markdown }}
