--- a/src/LarpManager/Views/public/user/messagerie.twig
+++ b/src/LarpManager/Views/public/user/messagerie.twig
@@ -38,7 +38,7 @@
 			{% for message in user.messageRelatedByDestinataires if not message.lu %}
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<u>{{ message.title }}</u>&nbsp;<strong>envoyé par</strong>&nbsp;{{ message.userRelatedByAuteur.personnage.surnom }}<br />
+						<u>{{ message.title }}</u>&nbsp;<strong>envoyé par</strong>&nbsp;{{ message.userRelatedByAuteur.personnage.publicName }}<br />
 						<em>Reçu le {{ message.creationDate|date('Y-m-d H:i:s') }}</em>
 					</div>
 					<div class="panel-body">
@@ -58,7 +58,7 @@
 			{% for message in user.messageRelatedByAuteurs %}
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<u>{{ message.title }}</u>&nbsp;<strong>envoyé a</strong>&nbsp;{{ message.userRelatedByDestinataire.personnage.surnom }}<br />
+						<u>{{ message.title }}</u>&nbsp;<strong>envoyé a</strong>&nbsp;{{ message.userRelatedByDestinataire.personnage.publicName }}<br />
 						<em>Envoyé le {{ message.creationDate|date('Y-m-d H:i:s') }}</em>
 					</div>
 					<div class="panel-body">
@@ -74,7 +74,7 @@
 			{% for message in user.messageRelatedByDestinataires if message.lu %}
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<u>{{ message.title }}</u>&nbsp;<strong>envoyé par</strong>&nbsp;{{ message.userRelatedByDestinataire.personnage.surnom }}<br />
+						<u>{{ message.title }}</u>&nbsp;<strong>envoyé par</strong>&nbsp;{{ message.userRelatedByDestinataire.personnage.publicName }}<br />
 						<em>Reçu le {{ message.creationDate|date('Y-m-d H:i:s') }}</em>
 					</div>
 					<div class="panel-body">
