Début du travial sur la diplomatie

--- a/src/LarpManager/Views/personnage/religion_add.twig
+++ b/src/LarpManager/Views/personnage/religion_add.twig
@@ -7,6 +7,7 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
+		<li><a href="{{ path('personnage')  }}">Votre personnage</a></li>
 		<li class="active">Choix d'une religion</li>
 	</ol>
 	
