--- a/src/LarpManager/Views/public/groupe/fragment/groupe.twig
+++ b/src/LarpManager/Views/public/groupe/fragment/groupe.twig
@@ -31,7 +31,17 @@
 	Votre groupe n'est pas lié à un territoire.
 {% endif %}
 				
+<div class="header">
+	<h5>Vos alliés</h5>
+</div>
 
+{% for alliance in groupe.alliances %}
+	{{ alliance.groupe }}
+{% endfor %}
+
+<div class="header">
+	<h5>Vos ennemis</h5>
+</div>
 
 
 
