--- a/src/LarpManager/Views/personnage/competence.twig
+++ b/src/LarpManager/Views/personnage/competence.twig
@@ -8,6 +8,7 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
+		<li><a href="{{ path('personnage')  }}">Votre personnage</a></li>
 		<li class="active">Achat d'une compétence</li>
 	</ol>
 	
