corrections de bugs. Debut du travail sur la diplomatie.

--- a/src/LarpManager/Views/groupeSecondaire/gestion_wait.twig
+++ b/src/LarpManager/Views/groupeSecondaire/gestion_wait.twig
@@ -6,7 +6,7 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path("groupeSecondaire.joueur", {'index':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a></li>
+		<li><a href="{{ path("groupeSecondaire.joueur", {'groupe':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a></li>
 		<li class="active">Mise en attente d'un postulant</li>
 	</ol>
 	
