--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -61,7 +61,7 @@
 						<li><a href="{{ path('classe') }}">Classes</a></li>
 						<li><a href="{{ path('age') }}">Ages</a></li>
 						<li><a href="{{ path('genre') }}">Genres</a></li>
-						<li><a href="{{ path('personnageSecondaire') }}">Personnage secondaire</a></li>
+						<li><a href="{{ path('personnageSecondaire.admin.list') }}">Personnage secondaire</a></li>
 					</ul>
 				</li>
 			{% endif %}
