--- a/src/LarpManager/Views/public/groupe/fragment/groupe.twig
+++ b/src/LarpManager/Views/public/groupe/fragment/groupe.twig
@@ -35,13 +35,38 @@
 	<h5>Vos alliés</h5>
 </div>
 
+<blockquote>
+	<p>Vous disposez de <strong>{{ groupe.alliances|length }}</strong> alliance sur un maximum de <strong>3</strong></p>
+	<p>Le nombre d'ennemi doit toujours être supérieur à votre nombre d'alliés</p>
+	<p>Vous pouvez choisir <strong>{{ groupe.ennemies|length - groupe.alliances|length }}</strong> supplémentaire</p>
+	<p>Pour augmenter le nombe d'alliance possible (jusqu'à un maximum de 3), choisissez plus d'ennemis</p>
+	</blockquote>
+
+<ul class="list-group">
 {% for alliance in groupe.alliances %}
-	{{ alliance.groupe }}
+	<li class="list-group-item">{{ alliance.groupe }} / <a href="#">Rompre cette alliance</a></li>
+{% else %}
+	Vous n'avez aucun alliés.
 {% endfor %}
+</ul>
+
+<a class="btn btn-default" href="#">Demander une alliance</a>
 
 <div class="header">
 	<h5>Vos ennemis</h5>
 </div>
 
+<blockquote>
+	<p>Vous disposez de <strong>{{ groupe.ennemies|length }}</strong> ennemis sur un maximum de <strong>5</strong></p>
+	<p>Si vous avez 3 ennemis ou plus, vous ne pouvez plus faire de Déclaration de guerre (mais vous pouvez toujours en recevoir)</p>
+	<p>Etre l’ennemi d’un groupe ne signifie pas que vous devez tuer à vue ses membres, simplement que vous avez un différent important à régler avec lui. Le but est de générer du jeu, pas de l’appauvrir en générant des massacres.</p>
+</blockquote>
+<ul class="list-group">
+{% for ennemi in groupe.ennemies %}
+	<li class="list-group-item">{{ ennemi.groupe }} / <a href="#">Proposer de faire la paix</a></li>
+{% else %}
+	Vous n'avez aucun ennemis.
+{% endfor %}
+</ul>
 
-
+<a class="btn btn-default" href="#">Choisir un ennemi</a>
